# taras-python-project

./: README.md  main.py  pyproject.toml
config/: __init__.py  config.ini  config.py
core/: __init__.py  core.py  validation.py
satellites/: __init__.py  satellites.py
